# delivery-srl

./: .gitignore  Cargo.toml
delivery-backend/: Cargo.toml  README.md  docker-compose.yml  init-replica-set.js  justfile  rustfmt.toml
delivery-backend/dbschema/: default.esdl
delivery-backend/dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql
delivery-backend/src/: app_error.rs  appliance_field.rs  database.rs  expiration.rs  jwt.rs  lib.rs  main.rs  responses.rs  state.rs  update.rs  user.rs
delivery-backend/src/admin/: header.rs
delivery-backend/src/auth/: jwt.rs  mod.rs  password.rs  store.rs  token.rs
delivery-backend/src/customer/: address.rs  appliance.rs  customer.rs  delivery_customer.rs  expired_customer.rs  mod.rs  operation_performed.rs  status.rs
delivery-backend/src/database/: customer_list.rs  db.rs  mod.rs
delivery-backend/src/database/collection/: customer.rs  mod.rs  user.rs
delivery-backend/src/error/: app_error.rs
delivery-backend/src/query/: expired.rs  mod.rs  search.rs  update.rs
delivery-backend/src/routers/: auth.rs  customer.rs  history.rs  mod.rs  search.rs
delivery-backend/src/routes/: add_client.rs  client.rs  customer.rs  history.rs  mod.rs  search.rs
delivery-backend/src/routes/search/: handler.rs  mod.rs  query.rs  search_query.rs
delivery-frontend/: Cargo.toml  package.json
