[package]
name = "delivery-backend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = {version = "0.6.15", features = ["headers"]}
axum-extra = "0.7.3"
axum-macros = "0.3.7"
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.28"
jsonwebtoken = "8.3.0"
mongodb = { version = "2.4.0", features = ["bson-chrono-0_4"] }
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "fs", "macros", "parking_lot"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
uuid = { version = "1.3.1", features = ["serde", "v1", "v4"] }
